@@ -112,6 +112,7 @@ dl.actionMenu.activated dd {
 .template-sharing,
 .template-login_form,
 .template-login_success,
+.template-register,
 .template-versions_history_form{
   font-family: Arial, Helvetica, sans-serif;
   #content {
