@@ -8202,6 +8202,7 @@ dl.actionMenu.activated dd {
 .template-sharing,
 .template-login_form,
 .template-login_success,
+.template-register,
 .template-versions_history_form {
   font-family: Arial, Helvetica, sans-serif; }
   .template-subscribers_config-html #content,
@@ -8213,6 +8214,7 @@ dl.actionMenu.activated dd {
   .template-sharing #content,
   .template-login_form #content,
   .template-login_success #content,
+  .template-register #content,
   .template-versions_history_form #content {
     background: white;
     padding: 30px; }
@@ -8234,6 +8236,8 @@ dl.actionMenu.activated dd {
     .template-login_form #content ul.formTabs,
     .template-login_success #content ul.formTabs,
     .template-login_success #content ul.formTabs,
+    .template-register #content ul.formTabs,
+    .template-register #content ul.formTabs,
     .template-versions_history_form #content ul.formTabs,
     .template-versions_history_form #content ul.formTabs {
       border-top-right-radius: 0;
@@ -8259,6 +8263,8 @@ dl.actionMenu.activated dd {
     .template-login_form #content [type='button'],
     .template-login_success #content [type='submit'],
     .template-login_success #content [type='button'],
+    .template-register #content [type='submit'],
+    .template-register #content [type='button'],
     .template-versions_history_form #content [type='submit'],
     .template-versions_history_form #content [type='button'] {
       color: #fff;
@@ -8282,6 +8288,8 @@ dl.actionMenu.activated dd {
     .template-login_form #content input[type='file'],
     .template-login_success #content input[value='Annuleren'],
     .template-login_success #content input[type='file'],
+    .template-register #content input[value='Annuleren'],
+    .template-register #content input[type='file'],
     .template-versions_history_form #content input[value='Annuleren'],
     .template-versions_history_form #content input[type='file'] {
       color: #333;
