@@ -4,7 +4,8 @@ History of this buildout
 6.0.13 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Set white background on @@register page.
+  [lhuiskes]
 
 
 6.0.12 (2016-04-18)
